[package]
name = "adpcm-xq-sys"
version = "0.1.5"
edition = "2024"
license = "BSD-3-Clause"
description = "Bindings to the `adpcm-xq` C library"
homepage = "https://github.com/adakite1/adpcm-xq-sys"
repository = "https://github.com/adakite1/adpcm-xq-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[features]
default = []
nds = []
